# job-scraper

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: loader.py  settings.py  sites.yaml
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: f17727a3f652_create_jobs_table.py
job_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scrapers/: base.py  simple.py  utils.py
