[project]
name = "job-scraper"
version = "0.1.0"
description = "Production-quality job scraper with Playwright, PostgreSQL, and CLI interface."
authors = [
    {name = "Justin"}
]
requires-python = ">=3.12"

dependencies = [
    "playwright>=1.42",
    "playwright-stealth>=1.0.6",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scrapers*", "db*", "cli*", "scheduler*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]